Updated Descriptions Again and renamed project files

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -17,6 +17,6 @@
         
     },
     "DisabledByDefault": false,
-    "Main": "com.rudev.wateringcans.Main",
+    "Main": "com.rudev.wateringcanplus.Main",
     "IncludesAssetPack": true
 }
